# First

./: .gitignore  README.md
labs/project/: CMakeLists.txt
labs/project/dependencies/: CMakeLists.txt
labs/project/dependencies/animatedgifs/src/: AnimatedGif.cpp
labs/project/dependencies/sfml/: CMakeLists.txt
labs/project/levels/: level_1  level_2
labs/project/program/: .goutputstream-KZLCB1  CMakeLists.txt
labs/project/program/src/: main.cpp
